# ml-pipeline

./: .gitignore  READMD.md  config.yaml  pyproject.toml
src/: __init__.py  data_loader.py  data_preprocessing.py  data_splitter.py  evaluation.py  main.py  model.py  pipeline.py
